package com.europay.hub.features.merchant.domain;

public enum ApiKeyStatus {
    ACTIVE,
    REVOKED
}
