package com.europay.hub.features.merchant.domain;

public enum MerchantStatus {
    ACTIVE,
    SUSPENDED
}
