package com.europay.hub.features.webhook.domain;

public enum WebhookStatus {
    PENDING,
    DELIVERED,
    FAILED
}
